--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: Verdana;
+}
+
 a {
   text-decoration: none;
 }
@@ -7,9 +11,14 @@ div {
 }
 
 /* Header */
+header {
+  height: 73px;
+}
+
 header .content {
   display: flex;
   position: fixed;
+  z-index: 1;
   width: 100%;
   background-color: white;
   font-size: 20px;
@@ -48,9 +57,130 @@ nav {
   display: none;
 }
 
-/* Section 1 */
+@media only screen and (max-width: 470px) {
+    .content .mobile {
+      display: inline;
+      text-align: center;
+    }
 
+    .content .desktop,
+    #logo {
+      display: none;
+    }
+}
+
+/* Section 1 */
+.main {
+  background-color: #d4d4d4;
+  width: 100%;
+  display: flex;
+}
+
+.block {
+  width: 60%;
+}
+
+#img {
+  padding: 2rem 1.5rem;
+  width : 90%;
+}
+
+.two {
+  width: 50%;
+  vertical-align: middle;
+  color: #5a5959;
+}
+
+h1 {
+  font-weight: bold;
+  font-size: 50px;
+  text-align: left;
+}
+
+.two h1, h2 {
+  width: 70%;
+}
+
+#btn {
+  width: 70%;
+  font-size: 24px;
+  padding: 10px;
+  background-color: #5a5959;
+  color: white;
+  border: none;
+  margin-top: 30px;
+  text-decoration: none;
+}
 /* Section 2 */
+.second {
+  background-color: white;
+  width: 100%;
+  display: flex;
+}
+
+.three #img {
+  width: 94%;
+}
+
+.three #img #text {
+
+}
+
+.column-small {
+  flex-direction: column;
+  border-color: grey;
+  vertical-align: middle;
+  width: 55%;
+  height: auto;
+}
+
+.img-column {
+  display: flex;
+  padding: 11px 30px;
+  border-bottom: 1px solid black;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+}
+
+#img-info {
+  display: block;
+  height: 200px;
+  width: 200px;
+}
+
+#text {
+  flex-direction: column;
+  text-align: left;
+  padding-left: 2rem;
+  padding-right: 25%;
+  padding-bottom: 2rem;
+  position: relative;
+}
+
+#text span h1 {
+  font-size: 2rem;
+}
+
+span #para {
+  padding-top: 30px;
+  font-style: italic;
+}
+
+#p1 {
+  font-size: 20px;
+}
+
+#p2 {
+
+}
+
+#p3 {
+
+}
+
+
 
 /* Section 3 */
 
